# ShapeView

./: .gitignore  CMakeLists.txt  README.md  config.yaml
src/: border.cpp  border.h  canvas.cpp  canvas.h  canvas_console.cpp  canvas_console.h  canvas_factory.cpp  canvas_factory.h  geometry.cpp  geometry.h  line_algorithm.h  main.cpp  matrix.cpp  matrix.h  point.h  shape.cpp  shape.h  shape_factory.cpp  shape_factory.h
